--- a/intro_gnome3/cli/democli3.glade
+++ b/intro_gnome3/cli/democli3.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.6"/>
   <object class="GtkListStore" id="liststore1">
@@ -12,6 +12,7 @@
   </object>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">democli</property>
     <signal name="delete-event" handler="on_window1_delete_event" object="box1" swapped="no"/>
     <child>
       <object class="GtkBox" id="box1">
