--- a/intro_gnome3/serv/demoserv3.glade
+++ b/intro_gnome3/serv/demoserv3.glade
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.38.2 -->
+<!-- Generated with glade 3.40.0 -->
 <interface>
   <requires lib="gtk+" version="3.20"/>
   <object class="GtkWindow" id="window1">
     <property name="can-focus">False</property>
+    <property name="title" translatable="yes">demoserv</property>
     <property name="default-width">200</property>
     <property name="default-height">100</property>
     <signal name="delete-event" handler="on_window1_delete_event" swapped="no"/>
